# First_repo

Module01/: collections.py  count_total_price_of_products.py
Module03/: module03.py
Module04/: module04.py
Module05/mod_pathlib/: mod_pathlib.py
Module05/other_files/: other_files.py
Module05/text_files/: text_files.py
Module06/: arg.py  module_sys.py  mymodule2.py
Module06/example_prj/: data.py  main.py  processing.py
Module06/joke/: jokes_handler.py
Module06/notes/: main.py  trying_modules.py
Module06/practice/: decorators_example.py  factorial.py  number_counter.py  own_exceptions.py  parsing_example.py
Module07/lesson/: _decimal.py  _defdict.py  _namedtuple.py  arg_parser_structure.py
Module07/notes/: counter_tasks.py  decimal_tasks.py  defaultdict_tasks.py  generators_tasks.py  named_tuple_tasks.py  queue_tasks.py  stack_tasks.py
Module08/lesson/: carrying.py  closures.py
Module08/notes/: _decorators.py  _functions.py  all_function.py  any_function.py  closure.py  comprehensions.py  currying.py  filter_function.py  lambda_function.py  map_function.py
Module08/practice/: comprehensions.py  decorators_example.py  generators_example.py  spam_words.py
Module09/lesson/: 02_inherit.py  abstraction.py  attributes.py  data_classes.py  mro.py  polymorphism.py
Module09/notes/: MRO.py  _enum.py  aggregation.py  class_UserDict.py  class_UserList.py  class_UserString.py  class_decorator.py  classes.py  composition.py  duck_typing.py  incapsulation.py  inheritance.py  own_exceptions.py
Module12/practice/salary_app/app_classes/: pyproject.toml
(+81 files in other folders)
